--- a/index.html
+++ b/index.html
@@ -6,31 +6,186 @@
     <script type="module" src="https://cdn.jsdelivr.net/npm/@google/model-viewer/dist/model-viewer.min.js"></script>
 
     <style>
-      body {
+      :root{--mv-size:80vw}
+      html,body{height:100%;margin:0}
+      body{
         margin: 0;
         background: #fff;
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
+        font-family: system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
       }
-      model-viewer {
-        width: 100%;
-        height: 100%;
+
+      .viewer-wrap{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
       }
+
+      model-viewer{
+        width: 100vw;
+        height: 100vh;
+        display: block;
+        background: #eee;
+        border-radius: 0;
+      }
+
+      model-viewer::part(ar-button) {
+        display: none !important;
+      }
+      model-viewer::part(default-ar-button) {
+        display: none !important;
+      }
+      model-viewer::part(quick-look-button) {
+        display: none !important;
+      }
+      model-viewer::part(scene-viewer-button) {
+        display: none !important;
+      }
+      model-viewer::part(webxr-button) {
+        display: none !important;
+      }
+
+      .selector{
+        position: absolute;
+        top: 12px;
+        left: 12px;
+        display: flex;
+        gap: 8px;
+        z-index: 1000;
+      }
+      .selector button{
+        padding: 22px 30px;
+        border-radius: 14px;
+        border: 2px solid rgba(0,0,0,0.18);
+        background: rgba(255,255,255,0.97);
+        backdrop-filter: blur(10px);
+        cursor: pointer;
+        font-size: 26px;
+        font-weight: 800;
+        line-height: 1;
+        box-shadow: 0 10px 26px rgba(0,0,0,0.10);
+      }
+      .selector button.active{
+        background: #0366d6;
+        color: white;
+        border-color: rgba(3,102,214,0.95);
+        box-shadow: 0 14px 32px rgba(3,102,214,0.22);
+      }
+
+      #customAR{
+        position: fixed;
+        bottom: 22px;
+        right: 22px;
+        z-index: 100000;
+        width: 140px;
+        height: 140px;
+        border-radius: 50%;
+        border: none;
+        background: transparent;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        transition: transform 0.12s ease;
+        -webkit-tap-highlight-color: transparent;
+        box-shadow: none;
+        overflow: visible;
+      }
+
+      #customAR img{ 
+        display: none !important; 
+      }
+
+      #customAR .ar-label{
+        font-size: 44px;
+        font-weight: 800;
+        letter-spacing: 1px;
+        color: #111;
+        pointer-events: none;
+      }
+      @media (max-width:600px){ #customAR .ar-label{ font-size: 34px } }
+
+      @media (max-width:600px){ #customAR{width:70px;height:70px} }
     </style>
   </head>
 
   <body>
-    <model-viewer
-      src="/modelos/Prontos/Boneco.glb"
-      ios-src="/modelos/Prontos/Boneco.usdz"
-      ar
-      ar-modes="quick-look scene-viewer webxr"
-      camera-controls
-      auto-rotate
-      environment-image="neutral"
-    >
-    </model-viewer>
+    <div class="viewer-wrap">
+      <div class="selector">
+        <button id="btnModelA" data-model="boneco" class="active">Boneco</button>
+        <button id="btnModelB" data-model="dado">Dado</button>
+      </div>
+
+      <model-viewer
+        id="mv"
+        src="https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/Prontos/Boneco.glb"
+        ios-src="https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/Prontos/Boneco.usdz"
+        alt="Modelo 3D"
+        ar
+        ar-modes="scene-viewer quick-look webxr"
+        camera-controls
+        auto-rotate
+        environment-image="neutral"
+      ></model-viewer>
+
+      <button id="customAR" aria-label="Ver em AR">
+        <span class="ar-label">AR</span>
+      </button>
+    </div>
+
+    <script>
+      const MODELS = {
+        boneco: {
+          glb: 'https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/Prontos/Boneco.glb',
+          usdz: 'https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/Prontos/Boneco.usdz'
+        },
+        dado: {
+          glb: 'https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/Prontos/dado.glb',
+          usdz: 'https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/Prontos/dado.usdz'
+        }
+      };
+
+      const mv = document.getElementById('mv');
+      const btnA = document.getElementById('btnModelA');
+      const btnB = document.getElementById('btnModelB');
+
+      function setActiveButton(name){
+        document.querySelectorAll('.selector button').forEach(b=>b.classList.remove('active'));
+        const btn = document.querySelector('.selector button[data-model="'+name+'"]');
+        if(btn) btn.classList.add('active');
+      }
+
+      function setModel(name){
+        const m = MODELS[name];
+        if(!m) return;
+        mv.src = m.glb;
+        mv.setAttribute('src', m.glb);
+        mv.setAttribute('ios-src', m.usdz);
+        setActiveButton(name);
+      }
+
+      btnA.addEventListener('click', ()=> setModel('boneco'));
+      btnB.addEventListener('click', ()=> setModel('dado'));
+
+      const urlParams = new URLSearchParams(window.location.search);
+      const wanted = urlParams.get('model');
+      if(wanted && MODELS[wanted]){
+        setModel(wanted);
+      }
+
+      const arBtn = document.getElementById('customAR');
+      arBtn.addEventListener('click', ()=>{
+        if(mv.activateAR){ mv.activateAR(); }
+        else { alert('AR não suportado neste dispositivo.'); }
+      });
+    </script>
   </body>
 </html>
