--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <title>AR - Boneco de Neve</title>
+    <title>A3 - Computação Gráfica</title>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@google/model-viewer/dist/model-viewer.min.js"></script>
 
     <style>
@@ -126,8 +126,8 @@
 
       <model-viewer
         id="mv"
-        src="https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/Prontos/Boneco.glb"
-        ios-src="https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/Prontos/Boneco.usdz"
+        src="https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/prontos/boneco.glb"
+        ios-src="https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/prontos/boneco.usdz"
         alt="Modelo 3D"
         ar
         ar-modes="scene-viewer quick-look webxr"
@@ -144,12 +144,12 @@
     <script>
       const MODELS = {
         boneco: {
-          glb: 'https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/Prontos/Boneco.glb',
-          usdz: 'https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/Prontos/Boneco.usdz'
+          glb: 'https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/prontos/boneco.glb',
+          usdz: 'https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/prontos/boneco.usdz'
         },
         dado: {
-          glb: 'https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/Prontos/dado.glb',
-          usdz: 'https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/Prontos/dado.usdz'
+          glb: 'https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/prontos/dado.glb',
+          usdz: 'https://raw.githubusercontent.com/GuilhermeIFer/ComputacaoGrafica/main/modelos/prontos/dado.usdz'
         }
       };
 
